# cpsm

./: CMakeLists.txt
autoload/: cpsm.vim
cmake/: FindICU.cmake  FindPythonConfig.cmake
src/: vim_extension.cc
